# phantom

./: .gitignore  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
phantom/: __init__.py  _cache.py  _chat.py  _data.py  _errors.py  _graph.py  _hooks.py  _inspect.py  _operation_set.py  _providers.py  _ref.py  _registry.py  _resolve.py  _result.py  _security.py  _serialize.py  _session.py  _system_prompt.py
phantom/contrib/: __init__.py  _base.py  duckdb.py  http.py  pandas.py  polars.py
