[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phantom"
version = "0.1.0"
description = "Semantic references for LLM pipelines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "James Wirth" }
]
keywords = ["llm", "references", "semantic", "data", "pipelines"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
polars = ["polars>=0.20"]
duckdb = ["duckdb>=0.9"]
all = ["pandas>=2.0", "polars>=0.20", "duckdb>=0.9"]
dev = [
    "pytest>=8.0",
    "mypy>=1.8",
    "pandas>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["phantom"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
